Fix page flicker; use media query to determine if device is touchscreen and adjust continue text accordingly

--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,18 @@ td.fit-width {
   }
 }
 
+@media (hover: hover) {
+  .touch {
+    display: none !important;
+  }
+}
+
+@media (hover: none) {
+  .no-touch {
+    display: none !important;
+  }
+}
+
 button {
   cursor: pointer;
 }
